# hermes-email-bridge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/linux/: hermes-email-agent-wrapper.py  hermes-email-agent.sudoers  hermes-email-boundary-verify.py  hermes-email-bridge.service
deploy/macos/: com.example.hermes.email-bridge.plist  fetch-hermes-email-agent.py  hermes-email-agent-adapter.py  hermes-email-agent-wrapper.py  hermes-email-agent.sudoers  hermes-email-boundary-verify.py  hermes-email-build-constraints.txt  install-hermes-email-agent.py  install-hermes-email-runtime.py  quarantine-hermes-email-runtime-v0_3.py  run-email-bridge.sh  verify-hermes-email-agent.py
src/hermes_email_bridge/: __init__.py  cli.py  config.py  log.py  mapping.py  models.py  runner.py  service.py  store.py  webhook.py
src/hermes_email_bridge/providers/: __init__.py  agentmail.py  base.py  composio_agentmail.py  fake.py
tests/: test_agentmail.py  test_bridge.py  test_cli.py  test_composio_agentmail.py  test_fetch_source.py  test_installer.py  test_isolation.py  test_migration.py  test_release.py  test_runtime_attestation.py  test_store.py  test_webhook.py
tests/fixtures/: incident_terminal_transcript.txt
