[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "hermes-email-bridge"
version = "0.5.0"
description = "Provider-neutral inbound email bridge for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Allen Ulbricht" }]
keywords = ["email", "hermes-agent", "agentmail", "bridge"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.15",
  "pytest>=8.3",
  "ruff>=0.11",
]

[project.scripts]
hermes-email-bridge = "hermes_email_bridge.cli:main"

[project.urls]
Homepage = "https://github.com/aulbricht/hermes-email-bridge"
Issues = "https://github.com/aulbricht/hermes-email-bridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_email_bridge"]

[tool.hatch.build.targets.sdist]
include = [
  "/.env.example",
  "/.github",
  "/LICENSE",
  "/README.md",
  "/deploy",
  "/src",
  "/tests",
  "/uv.lock",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
